--- a/translations/en.json
+++ b/translations/en.json
@@ -2301,5 +2301,6 @@
     "destroy": "Destroy",
     "mint": "Mint",
     "via": "via",
-    "x-counter": "x{{counter}}"
+    "x-counter": "x{{counter}}",
+    "code-snippet": "Code snippet"
 }
